// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot default 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Array [
            Object {
              "marginLeft": "auto",
              "marginRight": "auto",
              "maxWidth": 1180,
              "width": "100%",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View>
          <Text>
            [{"form":{"id":"id","databaseId":"databaseId","formType":"recipient","name":"name","code":"code","folderId":"folderId","fields":[]},"record":{"id":"id","formId":"formId","databaseId":"databaseId","values":[]}}]
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`should match the snapshot error 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Array [
            Object {
              "marginLeft": "auto",
              "marginRight": "auto",
              "maxWidth": 1180,
              "width": "100%",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          dataSet={Object {}}
          level="1"
          style={
            Object {
              "backgroundColor": undefined,
              "color": "#CE3616",
              "fontFamily": "Roboto_500Medium",
              "fontSize": 32,
              "fontStyle": undefined,
              "fontWeight": undefined,
              "letterSpacing": 0,
              "lineHeight": 38,
              "textAlign": "auto",
              "textDecorationLine": undefined,
            }
          }
        >
          error
        </Text>
        <View>
          <Text>
            [{"form":{"id":"id","databaseId":"databaseId","formType":"recipient","name":"name","code":"code","folderId":"folderId","fields":[]},"record":{"id":"id","formId":"formId","databaseId":"databaseId","values":[]}}]
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;

exports[`should match the snapshot loading 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {},
        Object {
          "dataSet": Object {},
        },
      ]
    }
    dataSet={Object {}}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        dataSet={Object {}}
        style={
          Array [
            Object {
              "marginLeft": "auto",
              "marginRight": "auto",
              "maxWidth": 1180,
              "width": "100%",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View
          dataSet={Object {}}
          fadeDuration={0.1}
          speed={1}
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 80,
              "overflow": "hidden",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#e5e5e5",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaProvider>
`;
